--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>通联数据算法交易系统</title>
+    <title>vortex</title>
   </head>
   <body>
     <div>
-	  <div id="security"></div>
+	  <div id="app"></div>
 	</div>
-	<script async type="text/javascript" src="./ui.js"></script>
+	<script async type="text/javascript" src="./index.js"></script>
   </body>
 </html>
