Signed-off-by: wanghsinche <wanghsinche@hotmail.com>

--- a/public/sample.html
+++ b/public/sample.html
@@ -42,7 +42,8 @@
         var usrpswd = 'xxxxxx';
         var usercode = 'code0', times = 0, stamp, nonce= '6812';
         var accessToken = '';
-        var host = 'http://localhost:8000';
+        // var host = 'http://localhost:8000';
+        var host = 'http://mycloud';
         function preAuthorize(){
         axios({
         method: 'get',
