--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>vortex</title>
+    <title>vortexOrder</title>
   </head>
   <body>
     <div>
