自己写了升级模块

--- a/src/ui/setting.html
+++ b/src/ui/setting.html
@@ -17,6 +17,10 @@
                     <label>服务器地址设置：</label>
                     <input type="url" class="form-control" placeholder="url" id="textcon">
                 </div>
+                <div class="form-group">
+                    <label>手动升级：</label>
+                    <button class="btn btn-default " id="update" style="display:block;">Update</button>
+                </div>
             </form>
         </div>
 
